put some opacity on the drop shadow because it seemed too dark, and change position to fixed

--- a/public/stylesheets/midas.css
+++ b/public/stylesheets/midas.css
@@ -334,8 +334,8 @@
   background: #E2E1E2;
   border: 1px solid #727272;
   margin-top: -1px;
-  position: absolute;
-	-moz-box-shadow: 1px 1px 4px #000;
-	-webkit-box-shadow: 1px 1px 4px #000;
-	box-shadow: 1px 1px 4px #000;
+  position: fixed;
+	-moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
+	-webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
+	box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
   }
